Move ports to interface level
