# pkg/virt-controller/services/template.go
@@ -20,7 +20,6 @@
 package services
 
 import (
-	"fmt"
 	"path/filepath"
 	"strconv"
 	"strings"
@@ -409,24 +408,14 @@ func getMemoryOverhead(domain v1.DomainSpec) *resource.Quantity {
 func getPortsFromVMI(vmi *v1.VirtualMachineInstance) []k8sv1.ContainerPort {
 	ports := make([]k8sv1.ContainerPort, 0)
 
-	configuredPorts := make(map[string]struct{})
 	for _, iface := range vmi.Spec.Domain.Devices.Interfaces {
-		if iface.Slirp != nil && iface.Slirp.Ports != nil {
-			for _, port := range iface.Slirp.Ports {
+		if iface.Ports != nil {
+			for _, port := range iface.Ports {
 				if port.Protocol == "" {
 					port.Protocol = "TCP"
 				}
-				if port.PodPort == 0 {
-					port.PodPort = port.Port
-				}
-				// The container port name must be unique, a combination of protocol and port.
-				name := fmt.Sprintf("%s-%d", strings.ToLower(port.Protocol), port.PodPort)
 
-				// Need to add the port only one time.
-				if _, ok := configuredPorts[name]; !ok {
-					ports = append(ports, k8sv1.ContainerPort{Protocol: k8sv1.Protocol(port.Protocol), Name: name, ContainerPort: port.PodPort})
-					configuredPorts[name] = struct{}{}
-				}
+				ports = append(ports, k8sv1.ContainerPort{Protocol: k8sv1.Protocol(port.Protocol), Name: port.Name, ContainerPort: port.Port})
 			}
 		}
 	}
